--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 <h2>欢迎光临</h2>
 add
 hahahhahahahha
+
+<hr />
+
+<!-- 区域1 -->
+<div> 
+
+</div>
+
+<hr />
+<hr />
+<hr />
+
+<!-- 区域2 -->
+<div>
+
+</div>
+
 </body>
 </html>
